color and font added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css">
     <link rel="stylesheet" type="text/css" href="index.css">
+    <link href="https://fonts.googleapis.com/css?family=Archivo+Black|Roboto" rel="stylesheet">
+
 </head>
 <body>
     <nav role="navigation">Menu</nav>
@@ -22,17 +24,7 @@
             Project 1
         </section>
 
-        <section>
-            Project 2
-        </section>
-
-        <section>
-            Project 3
-        </section>
-        
-        <section>
-            Project 4
-        </section>
+    
     </main>
     <footer role="content-info">Social Tags</footer>
 </body>
