added new project

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Portfolio</title>
-    <meta name="Portfolio" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css">
     <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -32,7 +32,13 @@
         <section>
           <a href="https://github.com/RougeBunn/QuizApp"><img src="img/QuizApp.PNG" alt="quiz"/></a>
             <h4>Nintendo QuizApp</h4>
+            <h3><a href="https://rougebunn.github.io/QuizApp/" alt="quiz demo">Demo Link</a></h3></br>
             <p>How much do you think you know about Nintendo. Try this 10 question quiz to see if you'll make Mario proud.</p>
+            </br>
+          <a href="https://github.com/RougeBunn/VG-Lookup"><img src="img/VG-Lookup.PNG" alt="VGL"/></a>
+            <h4>VG Lookup</h4>
+             <h3><a href="https://rougebunn.github.io/VG-Lookup/" alt="api demo">Demo Link</a></h3></br>
+            <p>This webapp uses IGDB.com's API to pull videogame data for individual titles.</p>
         </section>
 
     
