--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h3><a href="https://rougebunn.github.io/QuizApp/" alt="quiz demo">Demo Link</a></h3></br>
             <p>How much do you think you know about Nintendo. Try this 10 question quiz to see if you'll make Mario proud.</p>
             </br>
-          <a href="https://github.com/RougeBunn/VG-Lookup"><img src="img/VG-Lookup.PNG" alt="VGL"/></a>
+          <a href="https://github.com/RougeBunn/VG-Lookup"><img src="img/vg-lookup.PNG" alt="VGL"/></a>
             <h4>VG Lookup</h4>
              <h3><a href="https://rougebunn.github.io/VG-Lookup/" alt="api demo">Demo Link</a></h3></br>
             <p>This webapp uses IGDB.com's API to pull videogame data for individual titles.</p>
